--- a/core/app/views/dm_core/admin/custom_fields/_radio_buttons.html.erb
+++ b/core/app/views/dm_core/admin/custom_fields/_radio_buttons.html.erb
@@ -1,3 +1,3 @@
-<%= markdown(f.object.description) unless f.object.description.blank? %>
+<%= content_tag(:div, markdown(f.object.description), class: 'custom_field_description') unless f.object.description.blank? %>
 <%= f.input :field_data, as: :radio_buttons, collection: f.object.choice_list_array, label: field.label.blank? ? false : field.label, required: field.required? %>
 <%= f.hidden_field :custom_field_def_id %>
