added value method used by data export

--- a/app/views/dm_core/admin/custom_fields/_custom_field_def_fields.html.erb
+++ b/app/views/dm_core/admin/custom_fields/_custom_field_def_fields.html.erb
@@ -1,13 +1,13 @@
 <fieldset>
-  <%= f.input :field_type, collection: CustomFieldDef::FIELD_TYPES, required: true %>
-  <%= f.input :name, label: 'Field Name', placeholder: 'field_name', required: true, hint: "Such as 'hotelname', 'travel_date', 'number_traveling', etc" %>
+  <%= f.input :field_type, collection: CustomFieldDef::FIELD_TYPES, required: true, input_html: {class: 'width_50_percent'} %>
   <%= locale_tabs do |locale| %>
-    <%= f.input "label_#{locale}", label: 'Label' %>
+    <%= f.input "label_#{locale}", label: 'Label', hint: 'Text used to label the field' %>
     <%= f.input "description_#{locale}", label: 'Description', as: :text, input_html: {style: "height: 100px;"},
-           hint: 'Text shown before the field.  Markdown format' %>
+           hint: 'Text shown above the field, such as an introductory paragraph.  Markdown format' %>
   <% end %>
   <%= f.input :required, as: :boolean, label: 'Required' %>
-  <%= f.input :choice_list, label: 'Choice List', hint: 'Comma seperated list, used by Radio Buttons and Drop Downs' %>
+  <%= f.input :choice_list, label: 'Choice List', hint: 'Comma seperated list, used by Checboxes, Radio Buttons and Drop Downs', input_html: {class: 'width_50_percent'} %>
+  <%= f.input :name, label: 'Export Name', hint: "Name of the column in exported data and reports. The label will be used if blank", input_html: {class: 'width_50_percent'} %>
   <%= f.hidden_field :_destroy %>
   <% if f.object.custom_fields.empty? %>
     <%= link_to "[remove]", '#', class: 'remove_custom_fields' %>
