display editable custom fields a little better

--- a/app/views/dm_core/admin/custom_fields/_radio_buttons.html.erb
+++ b/app/views/dm_core/admin/custom_fields/_radio_buttons.html.erb
@@ -1,3 +1,4 @@
+<% disabled ||= false %>
 <%= content_tag(:div, markdown(f.object.description), class: 'custom_field_description') unless f.object.description.blank? %>
-<%= f.input :field_data, as: :radio_buttons, collection: f.object.choice_list_array, label: field.label.blank? ? false : field.label, required: field.required? %>
-<%= f.hidden_field :custom_field_def_id %>
+<%= f.input :field_data, as: :radio_buttons, collection: f.object.choice_list_array, label: field.label.blank? ? false : field.label, required: field.required?, disabled: disabled %>
+<%= f.hidden_field(:custom_field_def_id) unless disabled %>
