--- a/core/app/views/dm_core/profile/details.html.erb
+++ b/core/app/views/dm_core/profile/details.html.erb
@@ -17,8 +17,13 @@
   <fieldset>
     <h2><%= I18n.t 'core.profile_private_title' %></h2>
     <p><%= I18n.t 'core.profile_private_explanation' %></p>
-    <%= f.input :first_name, :label => I18n.t('core.profile_first_name'), :required => true %>
-    <%= f.input :last_name, :label => I18n.t('core.profile_last_name'), :required => true %>
+    <% if I18n.locale == :ja %>
+      <%= f.input :last_name, :label => I18n.t('core.profile_last_name'), :required => true %>
+      <%= f.input :first_name, :label => I18n.t('core.profile_first_name'), :required => true %>
+    <% else %>
+      <%= f.input :first_name, :label => I18n.t('core.profile_first_name'), :required => true %>
+      <%= f.input :last_name, :label => I18n.t('core.profile_last_name'), :required => true %>
+    <% end %>
     <%= f.input :address, :label => I18n.t('core.profile_address') %>
     <%= f.input :address2, :label => I18n.t('core.profile_address2') %>
     <%= f.input :city, :label => I18n.t('core.profile_city') %>
