--- a/cms/app/views/dm_cms/admin/dashboard/_widget_blog_comments.html.erb
+++ b/cms/app/views/dm_cms/admin/dashboard/_widget_blog_comments.html.erb
@@ -23,8 +23,7 @@
       <div class="media">
         <a class="pull-left" href="#"><div class="media-object"><%= avatar_for comment.user, 50 %></div></a>
         <div class="media-body">
-          <%= link_to "#{present(comment).author}", dm_cms.post_show_path(comment.commentable.cms_blog.slug, comment.commentable.slug, anchor: "comment_#{comment.id}"), class: 'media-heading hovertip', data: {placement: 'top'}, title: comment.user.full_name %>
-
+          <%= link_to "<span class='hovertip' data-placement='right' title='#{comment.user.full_name}'>#{present(comment).author}</span>".html_safe, dm_cms.post_show_path(comment.commentable.cms_blog.slug, comment.commentable.slug, anchor: "comment_#{comment.id}"), class: 'media-heading' %>
           <ul class="headline-info">
             <li><%= format_datetime comment.created_at %></li>
             <li><%= link_to comment.commentable.title, dm_cms.post_show_path(comment.commentable.cms_blog.slug, comment.commentable.slug, anchor: "comment_#{comment.id}"), class: 'post_title', target: '_blank' %></li>
