add avatar class

--- a/app/views/dm_core/admin/users/edit.html.erb
+++ b/app/views/dm_core/admin/users/edit.html.erb
@@ -92,7 +92,7 @@
     <% end %>
   </div>
   <div class="col-md-3">
-    <p><%= avatar_for @user, 200 %></p>
+    <p class="avatar"><%= avatar_for @user, 200 %></p>
     <%= subsection title: 'Details' do %>
       <dl>
         <dt class="text-info">Last Accessed On</dt>
