--- a/app/views/dm_core/admin/users/edit.html.erb
+++ b/app/views/dm_core/admin/users/edit.html.erb
@@ -28,7 +28,7 @@
       <% end %>
     <% end %>
 
-    <% if defined?(DmEvent) && current_user.is_sysadmin? %>
+    <% if defined?(DmEvent) %>
       <%= panel body: false, title: "Event Registrations" do %>
         <table class="table table-bordered table-condensed table-striped">
           <thead>
@@ -38,7 +38,8 @@
             </tr>
           </thead>
           <tbody>
-            <% Registration.unscoped.where(user_profile_id: @user.user_profile).each do |registration| -%>
+            <% reg = (is_sysadmin? ? Registration.unscoped : Registration.all) %>
+            <% reg.where(user_profile_id: @user.user_profile).each do |registration| %>
               <tr>
                 <td class="name"><%= registration.workshop ? registration.workshop.title : 'oops' %></td>
                 <td class="name"><%= registration.account.domain %></td>
@@ -49,7 +50,7 @@
       <% end %>
     <% end %>
 
-    <% if defined?(DmSubscriptions) && current_user.is_sysadmin? %>
+    <% if defined?(DmSubscriptions) %>
       <%= panel title: "Subscriptions" do %>
         <%= subsection title: 'Subscriptions' do %>
           <table class="table table-bordered table-condensed table-striped">
@@ -60,7 +61,8 @@
               </tr>
             </thead>
             <tbody>
-              <% Subscription.unscoped.where(subscriber_id: @user, subscriber_type: 'User').each do |subscription| -%>
+              <% sub = (is_sysadmin? ? Subscription.unscoped : Subscription.all) %>
+              <% sub.where(subscriber_id: @user, subscriber_type: 'User').each do |subscription| -%>
                 <tr>
                   <td class="name"><%= subscription.subscription_plan.name %></td>
                   <td class="name"><%= subscription.account.domain %></td>
@@ -79,7 +81,8 @@
               </tr>
             </thead>
             <tbody>
-              <% SubscriptionPayment.unscoped.where(subscriber_id: @user, subscriber_type: 'User').each do |payment| -%>
+              <% pay = (is_sysadmin? ? SubscriptionPayment.unscoped : SubscriptionPayment.all) %>
+              <% pay.unscoped.where(subscriber_id: @user, subscriber_type: 'User').each do |payment| -%>
                 <tr>
                   <td class="name"><%= format_date(payment.created_at) %></td>
                   <td class="name"><%= payment.amount.format %></td>
@@ -105,7 +108,7 @@
     <% end %>
     <% if @user.confirmation_token %>
       <%= link_to "Confirm This User", dm_core.confirm_admin_user_path(@user.id), :class => "btn btn-block btn-success" %>
-    <% else %>
+    <% elsif is_admin? || !@user.has_role?(:admin) %>
       <%= link_to "Become This User", dm_core.masquerade_admin_user_path(@user.id), :class => "btn btn-block btn-info" %>
     <% end %>
     <%= link_to("Delete This User", dm_core.admin_user_path(@user, :locale => DmCore::Language.locale), method: :delete, data: { confirm: 'Are you sure?' }, :title => 'Remove', :class => "btn btn-block btn-danger") if is_sysadmin? %>
