--- a/core/app/views/layouts/admin_theme/_navigation_top.html.erb
+++ b/core/app/views/layouts/admin_theme/_navigation_top.html.erb
@@ -9,18 +9,26 @@
   </div>
   <ul class="nav navbar-nav navbar-right collapse" id="navbar-icons">
     <li>
-      <%= link_to(dm_core.admin_users_path) do %>
+      <%= link_to(can?(:manage, :all) ? dm_core.admin_users_path : '#') do %>
         <i class='icon-people'></i> <span class='label label-default'><%= User.current_account_users.count %></span>
       <% end %>
     </li>
-    <li class="dropdown">
-      <a class="dropdown-toggle" data-toggle="dropdown"><i class="icon-cog3"></i></a>
-      <ul class="dropdown-menu dropdown-menu-right icons-right">
-        <li><%= link_to '<i class="icon-cog"></i> Account Settings'.html_safe, dm_core.admin_account_path %></li>
-        <li><%= link_to '<i class="icon-spinner8"></i> Update Assets'.html_safe, dm_core.admin_dashboard_update_site_assets_url, method: :patch %></li>
-        <li><%= link_to '<i class="icon-redo"></i> Clear Page Cache'.html_safe, dm_cms.admin_expire_cache_path, method: :patch %></li>
-      </ul>
-    </li>
+    <% if is_admin? || can?(:manage_content, :all) %>
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown"><i class="icon-cog3"></i></a>
+        <ul class="dropdown-menu dropdown-menu-right icons-right">
+          <% if is_admin? %>
+            <li><%= link_to '<i class="icon-cog"></i> Account Settings'.html_safe, dm_core.admin_account_path %></li>
+          <% end %>
+          <% if is_sysadmin? %>
+            <li><%= link_to '<i class="icon-spinner8"></i> Update Assets'.html_safe, dm_core.admin_dashboard_update_site_assets_url, method: :patch %></li>
+          <% end %>
+          <% if can? :manage_content, :all %>
+            <li><%= link_to '<i class="icon-redo"></i> Clear Page Cache'.html_safe, dm_cms.admin_expire_cache_path, method: :patch %></li>
+          <% end %>
+        </ul>
+      </li>
+    <% end %>
     <li class="user dropdown">
       <%= link_to '#', class: 'dropdown-toggle', data: {toggle: 'dropdown'} do %>
         <%= image_tag(current_user.user_profile.public_avatar_url(:sq35), width: 30, height: 30) %> 
