--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -36,16 +36,19 @@
             <% end %>
           <% end %>
 
-          <%= subsection title: 'Custom Fields' do %>
-            <% if @registration.custom_fields %>
+          <% unless @workshop.custom_field_defs.empty? %>
+            <%= subsection title: 'Custom Fields' do %>
               <% f.object.build_missing_fields @workshop %>
               <%= f.simple_fields_for :custom_fields do |builder| %>
                 <% field = builder.object %>
                 <%= render "dm_core/admin/custom_fields/#{field.field_type}", field: field, f: builder %>
               <% end %>
-            <% else %>
-              No custom fields defined
             <% end %>
+          <% end %>
+
+          <%= subsection title: 'Payment Reminders' do %>
+            <%= f.input :preferred_payment_reminder_hold_until, label: 'No reminder until', as: :string, input_html: {class: 'datepicker'},
+                         hint: 'When sending reminders in batch, this persons reminder will not be sent unless after the specified date' %>
           <% end %>
           
           <%= submit_or_cancel cancel_url: admin_workshop_path(@workshop), delete_url: [:admin, @registration], delete_confirm: 'Are you sure you wish to delete this registration?  Any associated payments will also be deleted!' %>
