--- a/event/app/views/dm_event/admin/workshops/_registration_stats.html.erb
+++ b/event/app/views/dm_event/admin/workshops/_registration_stats.html.erb
@@ -34,21 +34,13 @@
 <% unless @workshop.workshop_prices.empty? %>
   <%= subsection title: 'Price Distribution' do %>
     <% financials = @workshop.financial_details(:summary) %>
-    <% if false %>
-      <ul class="text-stats">
-        <li><%= financials[:summary][:total_possible].format(:no_cents => true) %><span>best</span></li>
-        <li><%= financials[:summary][:total_possible_worst].format(:no_cents => true) %><span>worst (80%)</span></li>
-        <li style="color:green"><%= financials[:summary][:total_paid].format(:no_cents => true) %><span>paid</span></li>
-      </ul>
-    <% end %>
     <ul class="statistics statistics-small statistics-linear">
       <li><%= stat_block_small label: 'Best', number: financials[:summary][:total_possible].format(no_cents_if_whole: true), color_type: :info, icon: 'icon-coin', percent: 100 %></li>
       <li><%= stat_block_small label: 'Worst (80%)', number: financials[:summary][:total_possible_worst].format(no_cents_if_whole: true), color_type: :warning, icon: 'icon-coin', percent: 80 %></li>
       <li><%= stat_block_small label: 'Paid', number: financials[:summary][:total_paid].format(no_cents_if_whole: true), color_type: :success, icon: 'icon-coin', percent: financials[:summary][:total_paid_percent] %></li>
     </ul>
-    <%= link_to 'Financial Details', financials_admin_workshop_url(@workshop), {class: 'btn-link',style: "padding-top: 10px; display:inline-block;"} %>
-  <% end %>
-  <%= subsection do %>
+    <%= link_to 'Financial Details', financials_admin_workshop_url(@workshop) %>
+    <hr>
     <div class="block progress-statistics">
       <% num_attending = workshop.registrations.number_of(:attending) %>
       <% workshop.registrations.number_of(:for_all_prices).each do |price_id, registration_count| %>
