--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -35,10 +35,14 @@
                 <%= f.input_field :discount_value %>
                 <%= f.select :discount_use_percent, [['%', true], [discount_currency, false]], {}, {style: "width: 60px", class: "select optional"} %>
               <% end %>
-          
+
             <% end %>
-      
-            <%= f.input :payment_comment, label: 'Reason for discount', as: :text_full_width, rows: 3 %>
+
+            <% if @registration.payment_comment %>
+              <%= f.input :payment_comment_text, label: 'Reason for discount', as: :text_full_width, rows: 3, hint: 'Used for justifcation of discount. Will then be available in comment section.', disabled: true, input_html: {value: @registration.payment_comment.body} %>
+            <% else %>
+              <%= f.input 'payment_comment_text', label: 'Reason for discount', as: :text_full_width, rows: 3, hint: 'Used for justifcation of discount. Will then be available in comment section.' %>
+            <% end %>
           <% end %>
         <% end %>
 
@@ -97,7 +101,7 @@
     <div class="tab-pane fade" id="private_comments">
 
       <%= subsection title: 'Private Comments' do %>
-        <%= render partial: 'dm_core/admin/shared/comment_section', locals: {commenting_on: @registration, comments: @registration.private_comments, name: 'private'} %>
+        <%= render partial: 'dm_core/admin/comments/comment_section', locals: {commenting_on: @registration, comments: @registration.private_comments, name: 'private_comments'} %>
       <% end %>
     </div>
 
